--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ main div p{
     align-items: center;
 }
 
+.backgroundImage h1{
+    stroke: #636363;
+}
+
 .wholePageBackgroundImage {
     background-size: cover;
     color: #FFFFFF;
@@ -144,4 +148,9 @@ li{
 
 .centeredContentDiv h2{
     margin-top: 35px;
+}
+
+.centeredContentDiv p{
+    text-align: center;
+    max-width: 75vw;
 }
