--- a/query.css
+++ b/query.css
@@ -1,5 +1,78 @@
-@media screen and (max-width: 2000px) {
+@media screen and (max-width: 910px) {
     header{
-        border: 1px solid red;
+        padding-bottom: 0;
+        position: relative;
+        padding: 0;
     }
+
+    nav{
+        flex-direction: column;
+        margin: 10px 0;
+    }
+    .iconImage{
+        transform: scale(0.5);
+        margin-top: 60px;
+        bottom: 0;
+        left: -50px;
+    }
+    .wholePgeBackgroundImage{
+        background-position: center;
+        background-repeat: no-repeat;
+        
+    }
+    .restaurace-heading{
+        display: none;
+    }
+    main div p{
+        text-align: center;
+        font-size: 30px;
+        font-weight: bold;
+        width: 90%;
+        margin: 10px auto;
+    }
+    footer{
+        height: auto!important;
+    }
+    footer div{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;  
+    }
+    footer div p{
+        margin: 0;
+    }
+
+    .centeredContentDiv div h2{
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    ul{
+        width: 90vw;
+    }
+    ul li{
+        width: 90%;
+    }
+    ul li p{
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        text-align: left;
+    }
+
+    .snicl{
+        display: flex;
+        justify-content: flex-start;
+
+    }
+    ul li p:nth-child(even){
+        justify-content: end;
+        width: 20%;
+    }
+
+    .history-paragraph{
+        font-size: 18px;
+    }
+    
 }
