--- a/style.css
+++ b/style.css
@@ -5,10 +5,8 @@
 body {
     margin: 0px;
     padding: 0px;
-
     display: flex;
     flex-direction: column;
-
     height: 100vh;
     max-height: 100vh;
 }
@@ -19,16 +17,14 @@ header {
     height: auto;
     padding-top: 25px;
     padding-bottom: 25px;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     font-size: 24px;
 }
 
 main{
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
 }
@@ -42,7 +38,9 @@ main div p{
     margin-top: 0px;
     font-size: 20px;
 }
-
+.welcome-page{
+    height: 90vh;
+}
 .backgroundImage {
     width: 100%;
 
@@ -83,7 +81,6 @@ main div p{
 nav {
     width: 50%;
     margin-left: 2vw;
-
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -97,7 +94,6 @@ a:link {
     text-decoration: none;
 }
 
-
 .lunchMenuButton{
     padding: 5px 35px 5px 35px;
     background-color: #3D6636;
@@ -107,7 +103,7 @@ a:link {
 footer {
     background-color: #555555;
     width: 100%;
-
+    display: block;
     margin-top: auto;
 
     color: #FFFFFF;
